# bank

./: .gitignore  FEATURE_SELECTION.md  FINAL_RESULTS.md  IMPROVEMENTS.md  README.md  RESULTS.md  deep_eda_analysis.py  predict_test.py  pyproject.toml  stacking_99_model.py  train_high_accuracy_model.py  ultra_high_accuracy_model.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: balanced_dataset_submission.csv  best_threshold.pkl  encoders.pkl  ensemble_submission.csv  feature_importance.csv  high_accuracy_submission.csv  model_analysis.csv  onehot_lgbm.csv  stacking_encoders.pkl  stacking_submission.csv  trial.csv  ultra_high_accuracy_submission.csv
notebook/: balanced_dataset.ipynb  deep_learning_ensemble.ipynb  feature_onehot.ipynb  final_strategy.ipynb  high_accuracy_model.ipynb  improved_lgbm_onehot.ipynb  lgbm_feature.ipynb  lgbm_high_accuracy.ipynb  trial.ipynb
src/: analyze_model.py  feature_analysis.py  hello.py  train_advanced_model.py  train_ensemble.py  train_improved_lgbm.py  train_simple_ensemble.py  train_with_feature_selection.py
