[project]
name = "signate_bank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "lightgbm>=4.6.0",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "polars>=1.33.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "xgboost>=2.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
]

